# policy-analysis-system

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: app.py
configs/: agent_roster.yaml  industry_taxonomy.yaml  normalization_bases.yaml  policy_sources.yaml  scoring_weights.yaml  support_channels.yaml
docs/: china_policy_crawler_and_agent_design.md  china_policy_index_current_implementation_analysis.md  china_policy_index_project_architecture.md  china_policy_index_system_design.md  development_plan_and_acceptance.md  高价值附加设计文档.md
openfisca_china_policy_index/: __init__.py  entities.py  system.py
openfisca_china_policy_index/variables/: __init__.py  state_support.py
policy_index/: __init__.py  api.py  classifier.py  config.py  crawler.py  exporter.py  io.py  observation_extractor.py  oecd_benchmark.py  paths.py  policy_signal.py  repository.py  runtime_guard.py
policy_index/ssi_engine/: __init__.py  agent_review.py  calculator.py  double_counting.py  models.py  openfisca_runner.py  storage.py  validation.py
scripts/: build_index.py  build_ssi_index.py  crawl_once.py  extract_observations.py  fetch_oecd_benchmark.py  validate_project.py
tests/: test_policy_signal.py  test_real_pipeline.py  test_runtime_guard.py  test_ssi_engine.py
