[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "china-policy-analyse"
version = "0.1.0"
description = "Independent CAMEL-AI project for China policy crawling, classification, and policy support indices."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=1.5",
  "flask>=3.0",
  "httpx>=0.27",
  "openfisca-core>=44.0",
  "pointblank>=0.24",
  "polars>=1.41",
  "pydantic>=2.13",
  "pyarrow>=16",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
agents = [
  "camel-ai>=0.2.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["policy_index*", "openfisca_china_policy_index*"]
